tests/whiley/valid/test_928.wyal
assert "assertion failed":
    forall(int[] arr):
        if:
            arr == [1, 2, 3]
            arr[0] < |arr|
        then:
            arr[1] < |arr|


